--- a/services.html
+++ b/services.html
@@ -1,5 +1,4 @@
-
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="uk">
 <head>
 <meta charset="UTF-8">
@@ -12,6 +11,11 @@
 :root {
   --bg: #f8f0ff;
   --text: #3A2E50;
+  --accent: #a86fff;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
@@ -20,7 +24,7 @@ body {
   background: var(--bg);
   color: var(--text);
   line-height: 1.6;
-  padding: 2rem;
+  padding: 0;
 }
 
 h1, h2, h3 {
@@ -30,6 +34,7 @@ h1, h2, h3 {
 .container {
   max-width: 1000px;
   margin: 0 auto;
+  padding: 1rem;
 }
 
 .section {
@@ -50,6 +55,12 @@ h1, h2, h3 {
   border-radius: 15px;
   object-fit: cover;
   flex: 1 1 300px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  transition: transform 0.3s;
+}
+
+.section img:hover {
+  transform: scale(1.03);
 }
 
 .section .text {
@@ -65,33 +76,17 @@ ul {
   margin-left: 1.2rem;
 }
 
-@media (max-width: 768px) {
-  .section {
-    flex-direction: column !important;
-    gap: 20px;
-  }
-  .section img, .section .text {
-    flex: 1 1 100%;
-  }
-}
-  /* ===== МЕНЮ ===== */
 nav {
   display: flex;
-  gap: 1.4rem;
-  padding: 0.8rem 1.5rem;
-  border-radius: 14px;
-  margin-bottom: 2rem;
-  background: var(--glass);
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 1rem 1.5rem;
+  justify-content: center;
+  background: rgba(255,255,255,0.2);
   backdrop-filter: blur(12px);
-  border: 1px solid var(--glass-border);
+  border-radius: 14px;
+  border: 1px solid rgba(0,0,0,0.05);
   box-shadow: 0 4px 20px rgba(0,0,0,0.12);
-  animation: navIn 1s ease forwards;
-  opacity: 0;
-}
-
-@keyframes navIn {
-  from {opacity: 0; transform: translateY(-15px);}
-  to   {opacity: 1; transform: translateY(0);}
 }
 
 nav a {
@@ -101,13 +96,51 @@ nav a {
   font-size: 1.1rem;
   transition: 0.25s;
   font-family: "Raleway", sans-serif;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
 }
 
 nav a:hover {
+  background: var(--accent);
+  color: #fff;
   transform: translateY(-2px);
-  text-shadow: 0 0 6px white;
 }
 
+@media (max-width: 768px) {
+  .section {
+    flex-direction: column !important;
+    gap: 20px;
+  }
+  .section img, .section .text {
+    flex: 1 1 100%;
+  }
+
+  nav {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  
+  nav a {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+@media (max-width: 480px) {
+  body {
+    padding: 0.5rem;
+  }
+  h1 {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+  h2 {
+    font-size: 1.4rem;
+  }
+  nav a {
+    font-size: 1rem;
+  }
+}
 </style>
 </head>
 
@@ -195,3 +228,5 @@ nav a:hover {
 
 </body>
 </html>
+
+
