--- a/services.html
+++ b/services.html
@@ -196,7 +196,7 @@ nav a:hover {
 
   <!-- Масаж спини -->
   <div class="section reverse">
-    <img src="343.jpg" alt="Масаж спини">
+    <img src=" " alt="Масаж спини">
     <div class="text">
       <h2>Масаж спини</h2>
       <p><strong>Тривалість:</strong> 45 хв | <strong>Вартість:</strong> 800 грн</p>
@@ -228,5 +228,6 @@ nav a:hover {
 
 </body>
 </html>
+
 
 
