--- a/services.html
+++ b/services.html
@@ -8,85 +8,21 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
-:root {
-  --bg: #f8f0ff;
-  --text: #3A2E50;
-  --accent: #a86fff;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: "Raleway", sans-serif;
-  background: var(--bg);
-  color: var(--text);
-  line-height: 1.6;
-  padding: 0;
-}
-
-h1, h2, h3 {
-  font-family: "Playfair Display", serif;
-}
-
-.container {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 1rem;
-}
-
-.section {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-  margin-bottom: 60px;
-  flex-wrap: wrap;
-}
-
-.section.reverse {
-  flex-direction: row-reverse;
-}
-
-.section img {
-  width: 100%;
-  max-width: 400px;
-  border-radius: 15px;
-  object-fit: cover;
-  flex: 1 1 300px;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-  transition: transform 0.3s;
-}
-
-.section img:hover {
-  transform: scale(1.03);
-}
-
-.section .text {
-  flex: 1 1 500px;
-}
-
-.underline {
-  border-bottom: 1px solid #aaa;
-  margin: 1rem 0;
-}
-
-ul {
-  margin-left: 1.2rem;
-}
-
 nav {
+  width: 100%;
   display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  padding: 1rem 1.5rem;
   justify-content: center;
-  background: rgba(255,255,255,0.2);
-  backdrop-filter: blur(12px);
-  border-radius: 14px;
-  border: 1px solid rgba(0,0,0,0.05);
-  box-shadow: 0 4px 20px rgba(0,0,0,0.12);
+  gap: 2rem;
+  
+  position: sticky;
+  top: 0;
+  z-index: 100;
+
+  padding: 1rem 1.2rem;
+  background: rgba(255, 255, 255, 0.45);
+  backdrop-filter: blur(18px);
+  
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
 nav a {
@@ -94,10 +30,9 @@ nav a {
   color: var(--text);
   font-weight: 600;
   font-size: 1.1rem;
-  transition: 0.25s;
-  font-family: "Raleway", sans-serif;
-  padding: 0.5rem 1rem;
-  border-radius: 10px;
+  padding: 0.4rem 0.8rem;
+  border-radius: 8px;
+  transition: all 0.25s ease;
 }
 
 nav a:hover {
@@ -107,45 +42,20 @@ nav a:hover {
 }
 
 @media (max-width: 768px) {
-  .section {
-    flex-direction: column !important;
-    gap: 20px;
-  }
-  .section img, .section .text {
-    flex: 1 1 100%;
-  }
-
   nav {
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-  
-  nav a {
-    width: 100%;
-    text-align: center;
-  }
-}
-
-@media (max-width: 480px) {
-  body {
-    padding: 0.5rem;
-  }
-  h1 {
-    font-size: 1.8rem;
-    text-align: center;
-  }
-  h2 {
-    font-size: 1.4rem;
+    gap: 1rem;
+    padding: 0.8rem 0.6rem;
   }
   nav a {
     font-size: 1rem;
+    padding: 0.35rem 0.6rem;
   }
 }
 </style>
+
 </head>
 
 <body>
-
 <!-- Меню -->
 <nav>
   <a href="index.html">Головна</a>
@@ -228,6 +138,7 @@ nav a:hover {
 
 </body>
 </html>
+
 
 
 
