--- a/services.html
+++ b/services.html
@@ -162,7 +162,7 @@ nav a:hover {
 
   <!-- Масаж спини -->
   <div class="section reverse">
-    <img src="c:\Users\Emil\OneDrive\Рабочий стол\Света\343.jpg" alt="Масаж спини">
+    <img src="343.jpg" alt="Масаж спини">
     <div class="text">
       <h2>Масаж спини</h2>
       <p><strong>Тривалість:</strong> 45 хв | <strong>Вартість:</strong> 800 грн</p>
@@ -194,5 +194,6 @@ nav a:hover {
 
 </body>
 </html>
+
 
 
